Stop cssnano changing z-index'es

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1219,10 +1219,6 @@ colgroup.hover {
   }
 }
 
-.select2-drop {
-  z-index: 9999;
-}
-
 @import "sidebar";
 @import "apps";
 @import "news";
